\name{NEWS}
\title{News for Package \pkg{cerebroApp}}

\section{Changes in version 1.2.1}{
\itemize{
    \item Small changes:
    \itemize{
      \item Scales for expression levels by sample and cluster in "Gene expression" and "Gene set expression" tabs are now set to be from 0 to 1.2 times the highest value. This is to limit the violin plots which cannot be trimed to the actual data range and will extend beyond, giving a false impression of negative values existing in the data.
      \item Hover info in expression by gene plot in "Gene expression" and "Gene set expression" tabs now show both the gene name and the mean expression value instead of just the gene name.
    }
}}

\section{Changes in version 1.2.0}{
\itemize{
    \item New features:
    \itemize{
      \item New button for composition plots (e.g. samples by clusters or cell cycle) that allows to choose whether to scale by actual cell count (default) or percentage.
      \item New button for composition plots that allows to show/hide the respective table of numbers behind them.
      \item New tab "Color management": Users can now change the color assigned to each sample/cluster.
      \item "Gene expression" and "Gene set expression" panels: Users can now pick from a set of color scales and adjust the color range.
      \item The gene selection box in the "Gene expression" panel will now allow to view available genes and select them by clicking. It is not necessary anymore to hit Enter or Space to update the plot, this will be done automatically after providing new input.
      \item It is now possible to export assays other than \texttt{RNA} through the \texttt{assay} parameter in relevant functions.
      \item Launch old Cerebro interfaces through \texttt{version} parameter in \texttt{launchCerebro()}.
      \item We added a vignette which explains how to use cerebroApp and its functions.
    }
    \item Other changes:
    \itemize{
      \item Add citation info.