@@ -18,6 +18,12 @@ overview_projection_info <- list(
   )
 )
 
+overview_details_selected_cells_table_info <- list(
+  title = "Details of selected cells",
+  text = p("Table containing meta data (some columns may be hidden, check the 'Column visibility' button) for cells selected in the plot using the box or lasso selection tool. If you want the table to contain all cells in the data set, you must select all cells in the plot. The table can be saved to disk in CSV or Excel format for further analysis.")
+)
 
-
-
+overview_details_selected_cells_plot_info <- list(
+  title = "Plot of selected cells",
+  text = p("Depending on the variable selected to color cells in the dimensional reduction, this plot will show different things. If you select a categorical variable, e.g. 'sample' or 'cluster', you will get a bar plot showing which groups the cells selected with the box or lasso tool come from. Instead, if you select a continuous variable, e.g. the number of transcripts (nUMI), you will see a violin/box plot showing the distribution of that variable in the selected vs. non-selected cells.")
+)
